--- a/filter.html
+++ b/filter.html
@@ -15,8 +15,7 @@
         <div class = "leftmenu">
             <input type = "text" placeholder="Search..." class = "search">
             <h1>Categories</h1>
-            <div class = "cats">
-        </div>
+            <div class = "cat"></div>
         <h1>Maxium Price</h1>
         <div class = "price">
             <input type = "range" class = "priceRange">
@@ -25,10 +24,6 @@
     </div>
     <div class ="content">
         <div class = "products">
-            <div class = "product">
-                
-            </div>
-
         </div>
     </div>
 
