--- a/filter.html
+++ b/filter.html
@@ -11,21 +11,24 @@
     <title>Filter Project</title>
 </head>
 <body>
-    <div class = "container"></div>
+    <div class = "container">
         <div class = "leftmenu">
             <input type = "text" placeholder="Search..." class = "search">
             <h1>Categories</h1>
-            <div class = "cat"></div>
-        <h1>Maxium Price</h1>
-        <div class = "price">
-            <input type = "range" class = "priceRange">
-            <div class = "span priceValue"></div>
-        </div>
+            <div class = "cats"></div>
+            <h1>Maxium Price</h1>
+            <div class = "price">
+                <input type = "range" class = "priceRange">
+                <div class = "span priceValue"></div>
+            </div>
     </div>
     <div class ="content">
         <div class = "products">
         </div>
+        </div>
     </div>
+
+
 
     <script src = "./filter.js"></script>
 
